@@ -3,6 +3,7 @@ Version: 2.10.5
 Date: ????
   Bugfixes:
     - Fixed NEW crash when attempting to take a empty blueprint.
+    - Exported blueprint books will now have the first blueprint selected by default.
 ---------------------------------------------------------------------------------------------------
 Version: 2.10.4
 Date: 2025-11-23
